tests/snapshots/integration__integration_tests__hook_show__hook_show_approval_status.snap
---
source: tests/integration_tests/hook_show.rs
info:
  program: wt
  args:
    - hook
    - show
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER HOOKS[39m  ~/.config/worktrunk/config.toml
💡 [2m(none configured)[22m

[36mPROJECT HOOKS[39m  [REPO]/.config/wt.toml
⚪ pre-merge [1mbuild[22m:
[107m [0m  [2m[0m[2m[34mcargo[0m[2m build[0m
❓ pre-merge [1mtest[22m: [2m(requires approval)[22m
[107m [0m  [2m[0m[2m[34mcargo[0m[2m test[0m
